--- a/sass/variables/_colors.scss
+++ b/sass/variables/_colors.scss
@@ -35,4 +35,6 @@
   --color-foggy-mountain: #d9d9d9;
   --color-pickled-bluewood: #373b54;
   --color-figcaptions-rgb: 75 75 90;
+  --color-post-author-background-rgb: 255 246 232;
+  --color-post-author-border: #e3dac5;
 }
